# pcl_ws

PCL-Notes/: appendix1.md  chapter7.md
Sampling/downsampling/: CMakeLists.txt  down_sampling.cpp
Sampling/surface_reconstruction/: surface_reconstruction.cpp
Sampling/surfacereconstruction/: CMakeLists.txt
Sampling/uniformsampling/: CMakeLists.txt  uniform_sampling.cpp
Sampling/upsampling/: CMakeLists.txt  up_sampling.cpp
pcl-learning/00base/pcl_version/: CMakeLists.txt
pcl-learning/04search搜索/01K近邻搜索/: k_nearest_neighbor_search.cpp
pcl-learning/04search搜索/02体素近邻搜索/: neighbors_within_voxel_search.cpp
pcl-learning/04search搜索/03半径内近邻搜索/: neighbors_within_radius_search.cpp
pcl-learning/05sampleconsensus抽样一致性模块/1随机采样一致性算法/: CMakeLists.txt  random_sample_consensus.cpp
pcl-learning/06range-images深度图像/1从点云创建深度图/: range_image_creation.cpp
pcl-learning/08IO输入输出/3concatenate_clouds/: concatenate_clouds copy.cpp  concatenate_clouds.cpp  saved.pcd
pcl-learning/09filters滤波/1直通滤波器进行滤波处理/: output_filtered.pcd  passthrough.cpp
pcl-learning/09filters滤波/2VoxelGrid滤波器对点云进行下采样/: voxel_grid.cpp
pcl-learning/09filters滤波/3滤波器移除离群点/: statistical_removal.cpp
pcl-learning/09filters滤波/4使用参数化模型投影点云/: project_inliers.cpp
pcl-learning/09filters滤波/5从一个点云中提取索引/: extract_indices.cpp
pcl-learning/09filters滤波/6用ConditionalRemoval或RadiusOutlinerRemoval移除离群点/: remove_outliers.cpp
